fix issue with action settings configurations not saving unless configured with a password value